# mne-python

./: .cirrus.yml  .conda-extra-dependencies.yml  .coveragerc  .extended_metadata.yaml  .git-blame-ignore-revs  .git_archival.txt  .github_changelog_generator  .gitignore  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  AGENTS.md  ANALYZE_MY_EDFS.bat  AUTHORS.rst  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEPLOYMENT_CHECKLIST.md  Dockerfile  EEG_ANALYSIS_README.md  LICENSE.txt  MANIFEST.in  Makefile  None  QUICK_COMMANDS.md  QUICK_START_CLIENT_ANALYSIS.md  README.rst  RUN_ANALYSIS.bat  SECURITY.md  SETUP_EVERYTHING.bat  TEST_RESULTS_SUMMARY.md  UNDERSTANDING_YOUR_RESULTS.md  Untitled.ipynb  WINDOWS_INSTRUCTIONS.md  YOUR_QUICK_START.md  analyze_my_data.py  (+58 more)
.circleci/: artifact_path  config.yml
.codeboarding/: Advanced_Analysis_Decoding.md  Data_Management_Core_Models.md  Output_Visualization.md  Signal_Preprocessing.md  Source_Analysis.md  System_Utilities_CLI.md  on_boarding.md
.devcontainer/: Dockerfile  Welcome.md  devcontainer.json  environment_cs.yml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  release.yaml  zizmor.yml
.ipynb_checkpoints/: test_exportedf-checkpoint.ipynb
debian/: README.source  TODO  changelog  control  copyright  files  gbp.conf  links  manpages  mne.1  python-mne-doc.links  python-mne.postinst.debhelper  python-mne.prerm.debhelper  python-mne.substvars  rules  watch
dev/: 002_P3_PassiveWet.vhdr  002_P3_PassiveWet.vmrk  bvload.py  epochs.py  plot_test.py
doc/: .gitignore  Dockerfile  Makefile  advanced_setup.rst  bibliography.rst  build_doc  carousel.inc  channel_types.rst  cite.rst  cited.rst  cited_mne.py  conceptual-flowchart.mmd  conf.py  conf_template.py  configure_git.rst  conftest.py  connectivity.rst  contributing.html  contributing.rst  creating_from_arrays.rst  credit.rst  customizing_git.rst  data_formats.rst  datasets.rst  decoding.rst  documentation.html  documentation.rst  events.rst  export.rst  faq.rst  file_io.rst  forward.rst  funding.rst  gen_conf.py  generate_mne_logos.py  getting_started.html  getting_started.rst  git_links.inc  glossary.rst  guide.rst  (+38 more)
example_mffs/: test_egi_evoked_cat1.txt
examples/: README.txt  compute_mne_inverse.py  create_objects_from_arrays.py  extract_events_from_raw.py  io_stc_fif.py  make_event_id.py  plot_2d_topography.py  plot_bem_contour_mri.py  plot_channel_epochs_image.py  plot_clickable_image.py  plot_compare_source_spaces.py  plot_compute_mne_inverse.py  plot_coregistration_transform.py  plot_decimate_head_surface.py  plot_define_higher_order_events.py  plot_define_target_events.py  plot_deflect_spatial_filter.py  plot_delayed_ssp_projector.py  plot_do_forward.py  plot_epochs_as_data_frame.py  plot_epochs_to_data_frame.py  plot_estimate_covariance_matrix.py  plot_estimate_covariance_matrix_baseline.py  plot_estimate_covariance_matrix_raw.py  plot_evoked_delayed_ssp.py  plot_evoked_topomap.py  plot_evoked_topomap_delayed_ssp.py  plot_evoked_whitening.py  plot_extract_events_from_raw.py  plot_field_lines.py  plot_find_ecg_artifacts.py  plot_find_eog_artifacts.py  plot_from_raw_to_epochs_to_evoked.py  plot_from_raw_to_multiple_epochs_to_evoked.py  plot_interpolate_bad_channels.py  plot_left_cerebellum_volume_source.py  plot_make_forward.py  plot_meg_eeg_fields_3d.py  plot_megsim_data.py  plot_megsim_data_single_trial.py  (+41 more)
fiff/: __init__.py  bem_surfaces.py  bunch.py  channels.py  constants.py  cov.py  ctf.py  diff.py  epochs.py  event.py  evoked.py  forward.py  inverse.py  matrix.py  meas_info.py  open.py  pick.py  proj.py  raw.py  read_tag.py  source_space.py  stc.py  tag.py  tree.py  write.py
logo/: LICENSE  README.md  generate_mne_logos.py
make/: install_python.ps1
mne/: __init__.py  __init__.pyi  __main__.py  _freesurfer.py  _hdf5.py  _ola.py  _version.py  annotations.py  artifact_detection.py  baseline.py  bem.py  bem_surfaces.py  bids.py  channels.py  chpi.py  config.py  conftest.py  coreg.py  cov.py  csp.py  cuda.py  defaults.py  dimensions.py  dipole.py  epochs.py  event.py  evoked.py  filter.py  fixes.py  forward.py  gui.py  info.py  inverse.py  label.py  misc.py  morph.py  morph_map.py  morpher.py  ndvar.py  parallel.py  (+22 more)
notebooks/: Untitled.ipynb  basic_sphere.ipynb  ipysurfer.ipynb  ipyvolume-brain-examples.ipynb  plot-brain.ipynb  plot_alignment.ipynb
tools/: azure_dependencies.sh  check_mne_location.py  check_old_env.py  check_old_lockfile.py  check_pyproject_helpers.py  check_qt_import.sh  check_steering_committee.py  circleci_bash_env.sh  circleci_dependencies.sh  circleci_download.sh  circleci_uv_overrides.txt  cirrus_dependencies.sh  cirrus_install_python.sh  cirrusci_install_python.sh  environment_minimal.yml  environment_old.yml  ft_neighbors_comparision.py  generate_codemeta.py  get_minimal_commands.sh  get_testing_version.sh  github_actions_check_old.py  github_actions_check_old_env.py  github_actions_check_old_env.sh  github_actions_check_old_lockfile.py  github_actions_dependencies.sh  github_actions_download.sh  github_actions_env_vars.sh  github_actions_helpers.sh  github_actions_infos.sh  github_actions_install.sh  github_actions_locale.sh  github_actions_setup_uv_bash.sh  github_actions_test.sh  github_actions_verify_python.sh  install_pre_requirements.sh  macos_hang_diag.sh  pixi.toml  pylock.ci-old.toml  pyqt6_requirements.txt  pytest_profile.py  (+4 more)
tutorials/: README.txt  Working_with_fNIRS_data.py  plot_artifacts_correction.py  plot_artifacts_correction_filtering.py  plot_artifacts_correction_ica.py  plot_artifacts_correction_ica_ssp.py  plot_artifacts_correction_maxwell_filtering.py  plot_artifacts_correction_rejection.py  plot_artifacts_correction_ssp.py  plot_artifacts_detection.py  plot_artifacts_intro.py  plot_background_filtering.py  plot_background_freesurfer.py  plot_background_morph.py  plot_background_statistics.py  plot_brainstorm_auditory.py  plot_brainstorm_phantom_ctf.py  plot_compute_covariance.py  (+68 more)
(+11236 files in other folders)
